--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -2059,7 +2059,11 @@ table.ac-table th{
 }
 
 @media (max-width: 550px) {
-  .accordion-bral .ac-label {
+.accordion-bral .ac-label {
+    font-size: 14px !important;
+  } .accordion-bral .article p {
+    font-size: 14px !important;
+  }  .accordion-bral .ac-label {
   font-family: Arial, sans-serif;
   /* padding: 5px 20px; */
   position: relative;
@@ -2116,7 +2120,11 @@ table.ac-table th{
 */
 
 @media (min-width: 768px) and (max-width: 1024px) {
-  .container{
+.accordion-bral .ac-label {
+    font-size: 14px !important;
+  } .accordion-bral .article p {
+    font-size: 14px !important;
+  }  .container{
     display: none;
   }
   /* CSS */
@@ -2191,7 +2199,11 @@ table.ac-table th{
 
 
 @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
-  .container{
+.accordion-bral .ac-label {
+    font-size: 14px !important;
+  } .accordion-bral .article p {
+    font-size: 14px !important;
+  }  .container{
     display: none;
   }
   /* CSS */
@@ -2287,7 +2299,11 @@ table.ac-table th{
 
 
 @media (min-width: 481px) and (max-width: 767px) {
-  .container{
+.accordion-bral .ac-label {
+    font-size: 14px !important;
+  } .accordion-bral .article p {
+    font-size: 14px !important;
+  }  .container{
     display: none;
   }
   /* CSS */
@@ -2369,7 +2385,11 @@ font-size: 3vw;
 
 
 @media (min-width: 320px) and (max-width: 480px) {
-  .container{
+.accordion-bral .ac-label {
+    font-size: 14px !important;
+  } .accordion-bral .article p {
+    font-size: 14px !important;
+  }  .container{
     display: none;
   }
   /* CSS */
@@ -2448,4 +2468,457 @@ font-size: 3vw;
 
   
   
+}
+
+
+
+
+@media all and (device-width:1024px ) and (device-height: 1366px) and (orientation:portrait) {
+.accordion-bral .ac-label {
+    font-size: 14px !important;
+  } .accordion-bral .article p {
+    font-size: 14px !important;
+  }  .ac-container {
+    width: 100%;
+    margin: 0px auto 0px auto;
+    text-align: left;
+    color: white;
+    mix-blend-mode: difference;
+    font-size: 14px;
+}
+
+.paragraph1 {
+  font-size: 14px;
+}
+
+
+.ac-container {
+  max-width: 100vw;
+  padding-top: 5vh;
+  color: white;
+  mix-blend-mode: difference;
+}
+}
+
+
+@media all and (device-width:768px ) and (device-height: 1024px) and (orientation:portrait) {
+.accordion-bral .ac-label {
+    font-size: 14px !important;
+  } .accordion-bral .article p {
+    font-size: 14px !important;
+  }  .ac-container {
+    width: 100%;
+    margin: 0px auto 0px auto;
+    text-align: left;
+    color: white;
+    mix-blend-mode: difference;
+    font-size: 14px;
+}
+
+.paragraph1 {
+  font-size: 14px;
+}
+
+
+.ac-container {
+  max-width: 100vw;
+  padding-top: 5vh;
+  color: white;
+  mix-blend-mode: difference;
+}
+}
+
+
+@media all and (device-width: 1024px) and (device-height: 768px) and (orientation:landscape) {
+.accordion-bral .ac-label {
+    font-size: 14px !important;
+  } .accordion-bral .article p {
+    font-size: 14px !important;
+  }
+  .ac-container {
+    width: 100%;
+    margin: 0px auto 0px auto;
+    text-align: left;
+    color: white;
+    mix-blend-mode: difference;
+    font-size: 14px;
+}
+
+.paragraph1 {
+  font-size: 14px;
+}
+
+
+.ac-container {
+  max-width: 100vw;
+  padding-top: 5vh;
+  color: white;
+  mix-blend-mode: difference;
+}
+}
+
+
+
+@media all and (device-width: 812px) and (device-height: 375px) and (orientation:landscape) {
+.accordion-bral .ac-label {
+    font-size: 14px !important;
+  } .accordion-bral .article p {
+    font-size: 14px !important;
+  }
+  .ac-container {
+    width: 100%;
+    margin: 0px auto 0px auto;
+    text-align: left;
+    color: white;
+    mix-blend-mode: difference;
+    font-size: 14px;
+}
+
+.paragraph1 {
+  font-size: 14px;
+}
+
+
+.ac-container {
+  max-width: 100vw;
+  padding-top: 5vh;
+  color: white;
+  mix-blend-mode: difference;
+}
+
+}
+
+
+@media all and (device-width: 736px) and (device-height: 414px) and (orientation:landscape) {
+.accordion-bral .ac-label {
+    font-size: 14px !important;
+  } .accordion-bral .article p {
+    font-size: 14px !important;
+  }
+  .ac-container {
+    width: 100%;
+    margin: 0px auto 0px auto;
+    text-align: left;
+    color: white;
+    mix-blend-mode: difference;
+    font-size: 14px;
+}
+
+.paragraph1 {
+  font-size: 14px;
+}
+
+
+.ac-container {
+  max-width: 100vw;
+  padding-top: 5vh;
+  color: white;
+  mix-blend-mode: difference;
+}
+
+}
+
+
+@media all and (device-width: 1024px) and (device-height: 600px) and (orientation:landscape) {
+.accordion-bral .ac-label {
+    font-size: 14px !important;
+  } .accordion-bral .article p {
+    font-size: 14px !important;
+  }
+  .ac-container {
+    width: 100%;
+    margin: 0px auto 0px auto;
+    text-align: left;
+    color: white;
+    mix-blend-mode: difference;
+    font-size: 14px;
+}
+
+.paragraph1 {
+  font-size: 14px;
+}
+
+
+.ac-container {
+  max-width: 100vw;
+  padding-top: 5vh;
+  color: white;
+  mix-blend-mode: difference;
+}
+
+}
+
+
+
+@media all and (device-width: 914px) and (device-height: 412px) and (orientation:landscape) {
+.accordion-bral .ac-label {
+    font-size: 14px !important;
+  } .accordion-bral .article p {
+    font-size: 14px !important;
+  }
+  .ac-container {
+    width: 100%;
+    margin: 0px auto 0px auto;
+    text-align: left;
+    color: white;
+    mix-blend-mode: difference;
+    font-size: 14px;
+}
+
+.paragraph1 {
+  font-size: 14px;
+}
+
+
+.ac-container {
+  max-width: 100vw;
+  padding-top: 5vh;
+  color: white;
+  mix-blend-mode: difference;
+}
+
+}
+
+
+@media all and (device-width: 912px) and (device-height: 1368px) and (orientation:portrait) {
+.accordion-bral .ac-label {
+    font-size: 14px !important;
+  } .accordion-bral .article p {
+    font-size: 14px !important;
+  }
+  .ac-container {
+    width: 100%;
+    margin: 0px auto 0px auto;
+    text-align: left;
+    color: white;
+    mix-blend-mode: difference;
+    font-size: 14px;
+}
+
+.paragraph1 {
+  font-size: 14px;
+}
+
+
+.ac-container {
+  max-width: 100vw;
+  padding-top: 5vh;
+  color: white;
+  mix-blend-mode: difference;
+}
+
+}
+
+@media all and (device-width: 820px) and (device-height: 1180px) and (orientation:portrait) {
+.accordion-bral .ac-label {
+    font-size: 14px !important;
+  } .accordion-bral .article p {
+    font-size: 14px !important;
+  }
+  .ac-container {
+    width: 100%;
+    margin: 0px auto 0px auto;
+    text-align: left;
+    color: white;
+    mix-blend-mode: difference;
+    font-size: 14px;
+}
+
+.paragraph1 {
+  font-size: 14px;
+}
+
+
+.ac-container {
+  max-width: 100vw;
+  padding-top: 5vh;
+  color: white;
+  mix-blend-mode: difference;
+}
+
+}
+
+
+
+@media all and (device-width: 667px) and (device-height: 375px) and (orientation:landscape) {
+.accordion-bral .ac-label {
+    font-size: 14px !important;
+  } .accordion-bral .article p {
+    font-size: 14px !important;
+  }
+  .ac-container {
+    width: 100%;
+    margin: 0px auto 0px auto;
+    text-align: left;
+    color: white;
+    mix-blend-mode: difference;
+    font-size: 14px;
+}
+
+.paragraph1 {
+  font-size: 14px;
+}
+
+
+.ac-container {
+  max-width: 100vw;
+  padding-top: 5vh;
+  color: white;
+  mix-blend-mode: difference;
+}
+
+}
+
+
+@media all and (device-width: 915px) and (device-height: 412px) and (orientation:landscape) {
+.accordion-bral .ac-label {
+    font-size: 14px !important;
+  } .accordion-bral .article p {
+    font-size: 14px !important;
+  }
+  .ac-container {
+    width: 100%;
+    margin: 0px auto 0px auto;
+    text-align: left;
+    color: white;
+    mix-blend-mode: difference;
+    font-size: 14px;
+}
+
+.paragraph1 {
+  font-size: 14px;
+}
+
+
+.ac-container {
+  max-width: 100vw;
+  padding-top: 5vh;
+  color: white;
+  mix-blend-mode: difference;
+}
+
+}
+
+
+
+@media all and (device-width: 851px) and (device-height: 393px) and (orientation:landscape) {
+.accordion-bral .ac-label {
+    font-size: 14px !important;
+  } .accordion-bral .article p {
+    font-size: 14px !important;
+  }
+  .ac-container {
+    width: 100%;
+    margin: 0px auto 0px auto;
+    text-align: left;
+    color: white;
+    mix-blend-mode: difference;
+    font-size: 14px;
+}
+
+.paragraph1 {
+  font-size: 14px;
+}
+
+
+.ac-container {
+  max-width: 100vw;
+  padding-top: 5vh;
+  color: white;
+  mix-blend-mode: difference;
+}
+
+}
+
+
+@media all and (device-width: 844px) and (device-height: 390px) and (orientation:landscape) {
+.accordion-bral .ac-label {
+    font-size: 14px !important;
+  } .accordion-bral .article p {
+    font-size: 14px !important;
+  }
+  .ac-container {
+    width: 100%;
+    margin: 0px auto 0px auto;
+    text-align: left;
+    color: white;
+    mix-blend-mode: difference;
+    font-size: 14px;
+}
+
+.paragraph1 {
+  font-size: 14px;
+}
+
+
+.ac-container {
+  max-width: 100vw;
+  padding-top: 5vh;
+  color: white;
+  mix-blend-mode: difference;
+}
+
+}
+
+
+@media all and (device-width: 896px) and (device-height: 414px) and (orientation:landscape) {
+.accordion-bral .ac-label {
+    font-size: 14px !important;
+  } .accordion-bral .article p {
+    font-size: 14px !important;
+  }
+  .ac-container {
+    width: 100%;
+    margin: 0px auto 0px auto;
+    text-align: left;
+    color: white;
+    mix-blend-mode: difference;
+    font-size: 14px;
+}
+
+.paragraph1 {
+  font-size: 14px;
+}
+
+
+.ac-container {
+  max-width: 100vw;
+  padding-top: 5vh;
+  color: white;
+  mix-blend-mode: difference;
+}
+
+}
+
+
+@media all and (device-width: 480px) and (device-height: 320px) and (orientation:landscape) {
+.accordion-bral .ac-label {
+    font-size: 14px !important;
+  } .accordion-bral .article p {
+    font-size: 14px !important;
+  }
+
+  
+
+  .ac-container {
+    width: 100%;
+    margin: 0px auto 0px auto;
+    text-align: left;
+    color: white;
+    mix-blend-mode: difference;
+    font-size: 14px;
+}
+
+.paragraph1 {
+  font-size: 14px;
+}
+
+
+.ac-container {
+  max-width: 100vw;
+  padding-top: 5vh;
+  color: white;
+  mix-blend-mode: difference;
+}
+
 }
