--- a/public/styles/ws-in-howto.css
+++ b/public/styles/ws-in-howto.css
@@ -148,7 +148,8 @@ body {
   /* cursor: url(../public/assets/images/cursor.cur) -50 -50, auto!important; */
     /* font-family: 'IBMPlexMono';  */
     background: #00002C;
-    cursor: url("cursor3.cur") -50 -50, auto!important;
+    cursor: url("cur.png"), url("cur.cur"), default;
+    cursor: url(cur.png), auto;
     transition: all 0.75s ease-in-out;
     transition: opacity 0.35s, padding-left 0.75s;
     animation: fadein 2s;
