--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -137,7 +137,8 @@ body {
   color: #000dff;
   overflow-y: hidden;
   overflow-x: hidden;
-  cursor: url("new.cur") -50 -50, auto!important;
+  cursor: url("cur.png"), url("cur.cur"), default;
+  cursor: url(cur.png), auto;
   /* font-family: 'IBMPlexMono';  */
     background: #00002C;
     transition: all 0.75s ease-in-out;
