--- a/public/styles/ws-in-seili.css
+++ b/public/styles/ws-in-seili.css
@@ -148,8 +148,9 @@ body {
   /* cursor: url(../public/assets/images/cursor.cur) -50 -50, auto!important; */
     /* font-family: 'IBMPlexMono';  */
     background: #00002C;
-    cursor: url("cursor3.cur") -50 -50, auto!important;
-    cursor: url("new.cur") -50 -50, auto!important;
+    /* cursor: url("new.cur") -50 -50, auto!important; */
+    cursor: url("cur.png"), url("cur.cur"), default;
+    cursor: url(cur.png), auto;
     transition: all 0.75s ease-in-out;
     transition: opacity 0.35s, padding-left 0.75s;
     animation: fadein 2s;
@@ -3974,6 +3975,7 @@ background-color: #625fb93c;
           /* background-color:#625fb93c; */
           /* backdrop-filter: blur(20px); */
           padding: var(--s-40);
+          padding-top: 0vh;
           /* border-radius: 2vw; */
           /* border: .5px solid #e0e0e0; */
           justify-content: center;
