--- a/public/styles/ws-in-howto.css
+++ b/public/styles/ws-in-howto.css
@@ -171,6 +171,10 @@ a {
   text-decoration: none;
 }
 
+a{
+  cursor: url("cur.png"), url("cur.cur"), default;
+  cursor: url(cur.png), auto;
+}
 
 section{
   transition: margin-top 0.75s ease-in-out;
